@@ -1,3 +1,7 @@
+2011-08-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_mutex.c: alter name of core_lock to avoid conflict on AIX (#55)
+
 2011-07-23    <warmerdam@pobox.com>
 
 	* configure.in, Makefile.am, proj.pc.in: Added pkg-config support (#3)
